ocaml/testsuite/tests/typing-layouts-bits64/unboxed_bits64s.compilers.reference
File "unboxed_bits64s.ml", line 19, characters 6-18:
19 |   let _not_allowed = Stdlib__Int64_u.of_int64 42L in
           ^^^^^^^^^^^^
Error: Non-value layout bits64 detected as sort for type int64#,
       but this requires extension layouts_alpha, which is not enabled.
       If you intended to use this layout, please add this flag to your build file.
       Otherwise, please report this error to the Jane Street compilers team.
